tests/unit-fail-compilation/j059f.ref
j059f.c:4:7: error: Declaration of an identifier for an object with no linkage and incomplete type.
  Undefined behavior (UB-TDL5). See C11 sec. 6.7:7, J.2:1 item 59
Translation failed (config dumped). Run kcc -d j059f.c to see commands run.
