tests/unit-fail-compilation/j059f.c
typedef union u u;

int main(void) {
      u a;
      return 0;
}

union u { int x; int y; };
